--- a/mZone/application/configs/application.ini
+++ b/mZone/application/configs/application.ini
@@ -9,6 +9,9 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
+
+//autoloaderNamespaces.my = "My_"
+
 [staging : production]
 
 [testing : production]
