--- a/mZone/application/configs/application.ini
+++ b/mZone/application/configs/application.ini
@@ -8,8 +8,6 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
-resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
-
 [staging : production]
 
 [testing : production]
@@ -25,5 +23,4 @@ resources.db.adapter = "PDO_MYSQL"
 resources.db.params.dbname = "iti_mZone"
 resources.db.params.host = "localhost"
 resources.db.params.username = "root"
-resources.db.params.password = "root"
-resources.db.params.charset = "utf8"
+resources.db.params.password = "123"
