--- a/mZone/application/configs/application.ini
+++ b/mZone/application/configs/application.ini
@@ -25,3 +25,5 @@ resources.db.params.dbname = "iti_mZone"
 resources.db.params.host = "localhost"
 resources.db.params.username = "root"
 resources.db.params.password = "root"
+
+resources.db.params.charset = "utf8"
