--- a/mZone/application/configs/application.ini
+++ b/mZone/application/configs/application.ini
@@ -9,6 +9,8 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
+
+resources.frontController.actionhelperpaths.Application_Controller_Helper = APPLICATION_PATH "/controllers/helpers"
 [staging : production]
 
 [testing : production]
@@ -24,7 +26,7 @@ resources.db.adapter = "PDO_MYSQL"
 resources.db.params.dbname = "iti_mZone"
 resources.db.params.host = "localhost"
 resources.db.params.username = "root"
-resources.db.params.password = "123"
+resources.db.params.password = "root"
 resources.db.params.charset = "utf8"
 
 myresources.GOOGLE_KEY = "632020422274-e5b0hg8t4002gvqrttj0bb60siftjvo5.apps.googleusercontent.com"
